--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/grid_master"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:adjustViewBounds="true"
-    android:columnWidth="180dp"
-    android:gravity="center"
-    android:horizontalSpacing="8dp"
-    android:numColumns="3"
-    android:padding="16dp"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="8dp">
-</GridView>
+    android:orientation="vertical">
+
+    <GridView
+        android:id="@+id/grid_master"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:adjustViewBounds="true"
+        android:columnWidth="180dp"
+        android:gravity="center"
+        android:horizontalSpacing="8dp"
+        android:numColumns="3"
+        android:padding="16dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="8dp"/>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="@string/next"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        />
+
+</LinearLayout>
+
